[package]
name = "imaging-smb-io"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Seekable SMB read I/O for microscopy file drivers"
repository = "https://github.com/keejkrej/imaging-smb-io"
readme = "README.md"
keywords = ["smb", "microscopy", "imaging", "io"]
categories = ["filesystem"]

[dependencies]
thiserror = "1.0"
